--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.25.2"
+    "@fastify/postgres": "^5.2.2",
+    "fastify": "^4.25.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@prisma/client": "^5.7.1",
     "@types/node": "^20.10.5",
+    "prisma": "^5.7.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
 }
