--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,15 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "A backend built with Express and PostgreSQL",
-    "main": "index.js",
+    "main": "src/index.ts",
     "license": "MIT",
     "dependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.14.2",
         "@types/pg": "^8.11.6",
+        "body-parser": "^1.20.2",
         "concurrently": "^8.2.2",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "nodemon": "^3.1.3",
         "pg": "^8.12.0",
@@ -16,7 +18,9 @@
         "typescript": "^5.4.5"
     },
     "scripts": {
-        "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-        "build": "tsc"
+        "start": "node dist/app.js",
+        "dev": "nodemon src/app.ts",
+        "build": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
