--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
         "typescript": "^5.4.5"
     },
     "scripts": {
-        "start": "node dist/app.js",
+        "start": "node --env-file='src/.env' dist/app.js",
         "dev": "nodemon src/app.ts",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
