--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
         "@types/pg": "^8.11.6",
         "body-parser": "^1.20.2",
         "concurrently": "^8.2.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "nodemon": "^3.1.3",
@@ -22,5 +23,8 @@
         "dev": "nodemon src/app.ts",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17"
     }
 }
